--- a/public/index.html
+++ b/public/index.html
@@ -6,52 +6,167 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+:root {
+    --bg: #0b0b0f;
+    --card: #14141b;
+    --accent: #8b5cf6;
+    --text: #e5e5e5;
+    --muted: #9ca3af;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 body {
-    background: black;
-    color: #eee;
-    font-family: Arial, sans-serif;
-    padding: 20px;
+    margin: 0;
+    background: radial-gradient(circle at top, #111827 0%, #020617 60%);
+    color: var(--text);
+    font-family: Inter, system-ui, Arial, sans-serif;
+    min-height: 100vh;
 }
 
-h1 { text-align: center; }
+header {
+    padding: 24px;
+    text-align: center;
+}
 
-.video {
+header h1 {
+    margin: 0;
+    font-size: 2.2rem;
+    letter-spacing: 0.5px;
+}
+
+header p {
+    margin-top: 6px;
+    color: var(--muted);
+    font-size: 0.95rem;
+}
+
+.search {
     max-width: 600px;
-    margin: 30px auto;
-    background: rgba(0,0,0,0.6);
-    padding: 10px;
-    border-radius: 6px;
+    margin: 20px auto 10px;
+    padding: 0 16px;
 }
 
-video {
+.search input {
     width: 100%;
+    padding: 12px 14px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    background: #0f172a;
+    color: var(--text);
+    font-size: 0.95rem;
+}
+
+.search input::placeholder {
+    color: #6b7280;
+}
+
+#videoGrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    gap: 20px;
+    padding: 20px;
+    max-width: 1400px;
+    margin: 0 auto 40px;
+}
+
+.video-card {
+    background: linear-gradient(180deg, #0f172a, #020617);
+    border-radius: 14px;
+    overflow: hidden;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+    transition: transform 0.25s ease, box-shadow 0.25s ease;
+}
+
+.video-card:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 16px 35px rgba(0,0,0,0.6);
+}
+
+.video-card video {
+    width: 100%;
+    display: block;
+    background: black;
+}
+
+.video-card .info {
+    padding: 12px 14px;
+}
+
+.video-card .title {
+    font-size: 0.95rem;
+    font-weight: 600;
+    margin: 0;
+    line-height: 1.3;
+    word-break: break-word;
+}
+
+.footer {
+    text-align: center;
+    padding: 20px;
+    color: #6b7280;
+    font-size: 0.85rem;
 }
 </style>
 </head>
 <body>
 
-<h1>Toppinghydra's Video Dump</h1>
+<header>
+    <h1>Toppinghydra's Video Dump</h1>
+    <p>Retarded and Racist.</p>
+</header>
 
-<div id="videoContainer"></div>
+<div class="search">
+    <input type="text" id="searchInput" placeholder="Search videos...">
+</div>
+
+<div id="videoGrid"></div>
+
+<div class="footer">
+    Powered by the dream of the Fourth Reich.
+</div>
 
 <script>
+const grid = document.getElementById("videoGrid");
+const searchInput = document.getElementById("searchInput");
+
+let allVideos = [];
+
+function render(videos) {
+    grid.innerHTML = "";
+    videos.forEach(file => {
+        const card = document.createElement("div");
+        card.className = "video-card";
+        card.dataset.title = file.toLowerCase();
+
+        card.innerHTML = `
+            <video controls preload="metadata">
+                <source src="/uploads/${file}">
+            </video>
+            <div class="info">
+                <p class="title">${file}</p>
+            </div>
+        `;
+
+        grid.appendChild(card);
+    });
+}
+
 fetch("/videos")
     .then(res => res.json())
     .then(files => {
-        const container = document.getElementById("videoContainer");
-
-        files.forEach(file => {
-            const div = document.createElement("div");
-            div.className = "video";
-            div.innerHTML = `
-                <h3>${file}</h3>
-                <video controls>
-                    <source src="/uploads/${file}">
-                </video>
-            `;
-            container.appendChild(div);
-        });
+        allVideos = files;
+        render(allVideos);
     });
+
+searchInput.addEventListener("input", () => {
+    const q = searchInput.value.toLowerCase();
+    const filtered = allVideos.filter(v => v.toLowerCase().includes(q));
+    render(filtered);
+});
 </script>
 
 </body>
