--- a/public/upload.html
+++ b/public/upload.html
@@ -2,20 +2,223 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Upload</title>
-<link rel="stylesheet" href="styles.css">
+<title>Upload Video</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+:root {
+    --bg: #020617;
+    --panel: #0f172a;
+    --accent: #8b5cf6;
+    --text: #e5e5e5;
+    --muted: #9ca3af;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    min-height: 100vh;
+    background: radial-gradient(circle at top, #111827 0%, var(--bg) 60%);
+    color: var(--text);
+    font-family: 'Inter', system-ui, Arial, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.card {
+    width: 100%;
+    max-width: 420px;
+    background: var(--panel);
+    border-radius: 20px;
+    padding: 32px 28px;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.6);
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.card h2 {
+    margin: 0;
+    font-size: 1.6rem;
+}
+
+.card p {
+    margin: 0;
+    color: var(--muted);
+    font-size: 0.9rem;
+}
+
+input[type="password"] {
+    width: 100%;
+    padding: 14px 16px;
+    border-radius: 12px;
+    border: 1px solid #334155;
+    background: #020617;
+    color: var(--text);
+    font-size: 1rem;
+    transition: border-color 0.2s;
+}
+
+input[type="password"]:focus {
+    border-color: var(--accent);
+}
+
+.dropzone {
+    border: 2px dashed #334155;
+    border-radius: 16px;
+    padding: 36px 20px;
+    text-align: center;
+    color: #94a3b8;
+    cursor: pointer;
+    transition: border-color 0.2s, background 0.2s;
+    font-size: 0.95rem;
+    display: none; /* hidden initially */
+}
+
+.dropzone:hover {
+    border-color: var(--accent);
+    background: rgba(139,92,246,0.05);
+}
+
+.dropzone input {
+    display: none;
+}
+
+button {
+    width: 100%;
+    padding: 14px;
+    border-radius: 14px;
+    border: none;
+    background: linear-gradient(135deg, #8b5cf6, #6366f1);
+    color: white;
+    font-weight: 600;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: transform 0.15s ease, box-shadow 0.15s ease;
+}
+
+button:hover {
+    transform: translateY(-1px);
+    box-shadow: 0 10px 20px rgba(139,92,246,0.35);
+}
+
+.hidden {
+    display: none;
+}
+
+.progress {
+    margin-top: 12px;
+    height: 10px;
+    width: 100%;
+    background: #020617;
+    border-radius: 999px;
+    overflow: hidden;
+    display: none;
+}
+
+.progress-bar {
+    height: 100%;
+    width: 0%;
+    background: linear-gradient(90deg, #8b5cf6, #6366f1);
+}
+</style>
 </head>
 <body>
 
-<h2>Upload Video</h2>
+<div class="card">
+    <h2>Upload Video</h2>
+    <p>Authorized access only.</p>
 
-<form action="/upload" method="post" enctype="multipart/form-data">
-    <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password" placeholder="Password" title="Enter your password" required><br><br>
-    <label for="video">Select Video:</label><br>
-    <input type="file" id="video" name="video" accept="video/*" title="Select a video file to upload" required><br><br>
-    <button type="submit">Upload</button>
-</form>
+    <form id="uploadForm">
+        <input type="password" id="passwordInput" placeholder="Enter password" required>
+        <button type="button" id="unlockBtn">Unlock</button>
+
+        <label class="dropzone" id="dropzone">
+            Click or drop video here
+            <input type="file" name="video" id="fileInput" accept="video/*" required>
+        </label>
+
+        <button type="submit" id="uploadBtn" class="hidden">Upload</button>
+
+        <div class="progress" id="progress">
+            <div class="progress-bar" id="progressBar"></div>
+        </div>
+    </form>
+</div>
+
+<script>
+const passwordInput = document.getElementById("passwordInput");
+const unlockBtn = document.getElementById("unlockBtn");
+const dropzone = document.getElementById("dropzone");
+const uploadBtn = document.getElementById("uploadBtn");
+const form = document.getElementById("uploadForm");
+const fileInput = document.getElementById("fileInput");
+const progress = document.getElementById("progress");
+const progressBar = document.getElementById("progressBar");
+
+// Change this to your desired password
+const PASSWORD = "dinklefart288";
+
+// Unlock dropzone only after correct password
+unlockBtn.addEventListener("click", () => {
+    if(passwordInput.value === PASSWORD){
+        dropzone.style.display = "block";
+        uploadBtn.style.display = "block";
+        passwordInput.disabled = true;
+        unlockBtn.style.display = "none";
+    } else {
+        alert("Incorrect password");
+        passwordInput.value = "";
+        passwordInput.focus();
+    }
+});
+
+// Drag & drop functionality
+dropzone.addEventListener("dragover", e => {
+    e.preventDefault();
+    dropzone.style.borderColor = "#8b5cf6";
+});
+
+dropzone.addEventListener("dragleave", () => {
+    dropzone.style.borderColor = "#334155";
+});
+
+dropzone.addEventListener("drop", e => {
+    e.preventDefault();
+    dropzone.style.borderColor = "#334155";
+    fileInput.files = e.dataTransfer.files;
+});
+
+// Upload functionality
+form.addEventListener("submit", e => {
+    e.preventDefault();
+    const formData = new FormData(form);
+    const xhr = new XMLHttpRequest();
+    xhr.open("POST", "/upload");
+
+    xhr.upload.onprogress = (e) => {
+        if (e.lengthComputable) {
+            const percent = (e.loaded / e.total) * 100;
+            progress.style.display = "block";
+            progressBar.style.width = percent + "%";
+        }
+    };
+
+    xhr.onload = () => {
+        if (xhr.status === 200) {
+            window.location.href = "/";
+        } else {
+            alert("Upload failed: " + xhr.responseText);
+        }
+    };
+
+    xhr.send(formData);
+});
+</script>
 
 </body>
 </html>
