Enhance HTML with Open Graph and Twitter metadata
Added Open Graph and Twitter Card metadata for better social sharing.

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,19 @@
 <title>Toppinghydra's Video Dump</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!-- Open Graph / Social Preview -->
+<meta property="og:title" content="Toppinghydra's Video Dump">
+<meta property="og:description" content="Shut the fuck up and watch some videos nigga.">
+<meta property="og:image" content="https://i.kym-cdn.com/photos/images/newsfeed/002/232/025/6ca.jpg">
+<meta property="og:url" content="https://video-dump.onrender.com/">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Toppinghydra's Video Dump">
+<meta name="twitter:description" content="Shut the fuck up and watch some videos nigga.">
+<meta name="twitter:image" content="https://i.kym-cdn.com/photos/images/newsfeed/002/232/025/6ca.jpg">
+
 <style>
 :root {
     --bg: #0b0b0f;
